--- a/browserbugs/chromeSelect.html
+++ b/browserbugs/chromeSelect.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<p>Use up and down arrows to change selected option.</p>
+<p>Use up and down arrow keys to change selected option.</p>
 <select id="s" multiple autofocus></select>
 
 <style>
