Say something funny nathan.

--- a/nathanhopping/index.html
+++ b/nathanhopping/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
   <p>This is hosted on <a href="http://bparr.github.io/nathanhopping/index.html">http://bparr.github.io/nathanhopping/index.html</a>!</p>
+  <p>Say something funny: <!-- i dont write essays --> </p>
 </body>
 </html>
