Use new journalapp favicon in the journalapp/index.html.

--- a/journalapp/index.html
+++ b/journalapp/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html ng-app="journalApp">
+  <link rel="shortcut icon" href="favicon.ico" />
 <!-- TODO better name than journalApp and journalController??? -->
 <head>
 
