Add homepage icon to journalapp.

--- a/journalapp/index.html
+++ b/journalapp/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="journalApp">
   <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="apple-touch-icon-precomposed" sizes="128x128" href="homepage.png">
 <!-- TODO better name than journalApp and journalController??? -->
 <head>
 
