Try again 10 seconds after failing.

--- a/places/index.html
+++ b/places/index.html
@@ -41,6 +41,9 @@
           document.getElementById('my-textarea').value = output.join('\n');
           geocodeAway();
         }
+        else {
+          window.setTimeout(geocodeAway, 10000);
+        }
       }
 
       function clicked() {
