--- a/places/index.html
+++ b/places/index.html
@@ -63,7 +63,7 @@
     </script>
   </head>
   <body>
-    <p>Paste address info, one per line, below, then convert to place id by clicking <button onclick=clicked()>Here</button></p>
+    <p>Paste address info, one per line, below, then convert to place id by clicking <button onclick=clicked()>Here 2</button></p>
     <div style="display: none" id='my-div'><textarea id='my-textarea'rows='25' cols='100'></textarea></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuAsP-qb3PbudKU7_hznW_PgElG1-tv-o&libraries=places&callback=initMap" async defer></script>
   </body>
